--- a/src/main/resources/static/css/media.css
+++ b/src/main/resources/static/css/media.css
@@ -1,4 +1,4 @@
-@media(max-width: 1024px){
+@media(max-width: 1100px){
     body {
         align-items: center;
       }
@@ -12,7 +12,7 @@
       }
     
       .container {
-        max-width: 1098px;
+        max-width: 1000px;
         padding: 0 51px;
         margin: 0 auto;
         width: 100%;
@@ -20,12 +20,22 @@
       }
     
       .header__container {
+        padding: 0;
         padding-top: 25px;
         padding-bottom: 27px;
+      }
+
+      .header__logo{
+        margin-right: auto;
+      }
+
+      .nav{
+        max-width: 100%;
       }
     
       .nav__list {
         margin-right: 104px;
+        padding: 0;
       }
     
       .header__logo__picture {
@@ -40,13 +50,51 @@
 
       .form-container{
         padding: 0;
-        padding-bottom: 45px;
+        margin-bottom: 45px;
         border-radius: 15px;
+        max-width: 100%;
         }
 
         .form-header{
             margin-top: 0;
             padding: 0 ;
         }
+
+        .form-body{
+          max-width: 95%;
+        }
+
+        .form-space{
+          justify-content: center;
+          min-width: 660px;
+          overflow: scroll;
+          max-width: 100%;
+        }
+
+        .selector-patch{
+          width: 110px;
+        }
+
+        .selector-patch-2{
+          width: 110px;
+        }
+
+        .slider-val{
+          width: 95%;
+        }
+
+        .selection-param {
+          line-height: 21px;
+          font-size: 12px;
+          min-height: 43px;
+      }
+
+      .margin-fix{
+        margin-right: auto;
+      }
     
+}
+
+.td-table{
+  word-break:break-word;
 }
