--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -292,27 +292,30 @@ html {
     width: 60px;
   }
 
+  .form-support{
+    padding-top: 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+  }
 
-  .form__header-support {
+
+  .form__header {
     margin: 0;
     margin-bottom: 25px;
     font-size: 48px;
     font-weight: 400;
     line-height: 59px;
-    color: #CACACA;
+    color: #ffffff;
+    text-shadow: 1px 1px 7px #009dff,
+    1px 1px 10px #21aaff,
+    1px 1px 15px #25abff,
+    1px 1px 21px #2aadff;
   }
   
   .form-body-support {
-    /*flex-shrink: 1;*/
-    margin: 0;
-    align-items: center;
-    justify-content: space-between;
-    padding: 31px 28px 30px;
-    background-color: #FFFFFF;
-    border-radius: 15px;
-    min-height: 106px;
-    border: 5px solid rgba(70,156,235,0.75);
-    width: 100%;
     display: flex;
     flex-direction: column;
   }
@@ -427,3 +430,6 @@ html {
     opacity: 1;
   }
   
+  .leveling{
+    padding: 0;
+  }
