--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -12,9 +12,38 @@ html {
   table{
     margin-bottom: -2px;
     width: 100%;
+    min-width: 1190px;
+  }
+  
+  table thead th {
+    font-weight: bold;
+    text-align: left;
+    border: none;
+    padding: 10px 15px;
+    background: #d8d8d8;
+    font-size: 14px;
+    border-left: 1px solid #ddd;
+    border-right: 1px solid #ddd;
+  }
+
+
+
+  
+
+  .section-header{
+    margin: 0;
+    margin-bottom: 45px;
+  }
+
+  
+
+  .columns{
+        width: 100%;
+    min-width: 1190px;
   }
   
   .tr-table{
+
     display: flex;
     width: 100%;
     outline : 0.5px solid black;;
@@ -120,7 +149,6 @@ html {
 
 
 .form-container{
-  padding: 0;
     padding-top: 45px;
     padding-bottom: 45px;
     border-radius: 15px;
@@ -143,7 +171,7 @@ html {
     border-radius: 15px;
     min-height: 106px;
     border: 5px solid rgba(70,156,235,0.75);
-    width: 95%;
+    width: 100%;
   }
   
 
@@ -285,7 +313,7 @@ html {
   }
 
   .display{
-    margin-bottom: 50px;
+   padding-bottom: 50px;
   }
 
   .icons-social{
@@ -432,4 +460,10 @@ html {
   
   .leveling{
     padding: 0;
+    overflow: scroll;
+    box-shadow: -1px 1px 29px -2px rgba(70,156,235,0.75);
+    -webkit-box-shadow: -1px 1px 29px -2px rgba(70,156,235,0.75);
+    -moz-box-shadow: -1px 1px 29px -2px rgba(70,156,235,0.75);
   }
+
+  
