--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,8 +10,8 @@
 <div class="container">
     <h1>Welcome to Your Home Page</h1>
     <a th:href="@{/sql/lecturers}" class="btn">Go to SQL Page</a>
-    <a th:href="@{/faq}" class="btn">Go to FAQ</a>
-    <a th:href="@{/support}" class="btn">Go to Support</a>
+<!--    <a th:href="@{/faq}" class="btn">Go to FAQ</a>-->
+<!--    <a th:href="@{/support}" class="btn">Go to Support</a>-->
 </div>
 </body>
 </html>
