--- a/src/main/resources/static/css/media.css
+++ b/src/main/resources/static/css/media.css
@@ -1,106 +1,117 @@
 @media(max-width: 1100px){
-    body {
-        align-items: center;
-      }
-    
-      .main{
-        margin-bottom: 80px;
-      }
-    
-      .header {
-        margin-bottom: 40px;
-      }
-    
-      .container {
-        max-width: 1000px;
-        padding: 0 25px;
-        margin: 0 auto;
-        width: 100%;
-    
-      }
-    
-      .header__container {
-        padding: 0;
-        padding-top: 25px;
-        padding-bottom: 27px;
+  body {
+      align-items: center;
+    }
+  
+    .main{
+      margin-bottom: 80px;
+      flex-grow: 0;
+    }
+  
+    .header {
+      margin-bottom: 40px;
+      width: 100%;
+    }
+  
+    .container {
+      max-width: 1000px;
+      margin: 0 auto;
+      width: 100%;
+  
+    }
+  
+    .header__container {
+      padding: 0;
+      padding-top: 25px;
+      padding-bottom: 27px;
+    }
+
+    .header__logo{
+      margin-right: auto;
+    }
+
+    .nav{
+      max-width: 100%;
+    }
+
+    .nav__list{
+      padding: 0;
+    }
+
+
+
+    .nav__links{
+      font-size: 16px;
+    }
+  
+  
+    .header__logo__picture {
+      max-width: 150px;
+      height: 48px;
+    }
+  
+    .nav__item:not(:last-child) {
+      --current-pad: 0px;
+      margin-right: 35px;
+    }
+
+    .form-container{
+      padding: 0;
+      margin-bottom: 45px;
+      border-radius: 15px;
+      max-width: 100%;
       }
 
-      .header__logo{
-        margin-right: auto;
+      .form-header{
+          margin-top: 0;
+          padding: 0 ;
       }
 
-      .nav{
+      .form-body{
+        max-width: 95%;
+      }
+
+      .form-space{
+        justify-content: center;
+        min-width: 660px;
+        overflow: scroll;
         max-width: 100%;
       }
-    
-    
-      .header__logo__picture {
-        max-width: 150px;
-        height: 48px;
-      }
-    
-      .nav__item:not(:last-child) {
-        --current-pad: 0px;
-        margin-right: 52px;
+
+      .selector-patch{
+        width: 110px;
+        margin-right: 2%;
       }
 
-      .form-container{
-        padding: 0;
-        margin-bottom: 45px;
-        border-radius: 15px;
-        max-width: 100%;
-        }
-
-        .form-header{
-            margin-top: 0;
-            padding: 0 ;
-        }
-
-        .form-body{
-          max-width: 95%;
-        }
-
-        .form-space{
-          justify-content: center;
-          min-width: 660px;
-          overflow: scroll;
-          max-width: 100%;
-        }
-
-        .selector-patch{
-          width: 110px;
-          margin-right: 2%;
-        }
-
-        .selector-patch-2{
-          width: 110px;
-          margin-right: 5%;
-        }
-
-        .slider-val{
-          width: 95%;
-        }
-
-        .selection-param {
-          line-height: 21px;
-          font-size: 12px;
-          min-height: 43px;
+      .selector-patch-2{
+        width: 110px;
+        margin-right: 5%;
       }
 
-      .margin-fix{
-        margin-right:   2%;
+      .slider-val{
+        width: 95%;
       }
 
-      .val{
-        width: 100%;
-      }
-    
+      .selection-param {
+        line-height: 21px;
+        font-size: 12px;
+        min-height: 43px;
+    }
+
+    .margin-fix{
+      margin-right:   2%;
+    }
+
+    .val{
+      width: 100%;
+    }
+  
 }
 
 .td-table{
-  word-break:break-word;
+word-break:break-word;
 }
 
 .leveling{
-  padding: 0;
+padding: 0;
 }
