--- a/src/main/resources/templates/lecturers.html
+++ b/src/main/resources/templates/lecturers.html
@@ -15,51 +15,52 @@
 </head>
 
 <body>
+
 <header class="header">
-    <div class="header__container flex">
-        <div class="container flex">
-            <a th:href="@{/}" class="header__logo">
-                <div class="header__logo-inside flex"><img src="/img/rudn_logo.png" alt="Евклид" class="header__logo__picture"></div></a>
-            <nav class="nav flex">
-                <ul class="list-reset nav__list flex">
+<div class="header__container flex">
+    <div class="container flex">
+        <a th:href="@{/}" class="header__logo">
+            <div class="header__logo-inside flex"><img src="/img/rudn_logo.png" alt="Евклид" class="header__logo__picture"></div></a>
+        <nav class="nav flex">
+            <ul class="list-reset nav__list flex">
 
 
-                    <li class="nav__item">
-                        <a class="nav__links" th:href="@{/sql/lecturers}">Учителям</a>
-                    </li>
-                    <li class="nav__item">
-                        <a class="nav__links" th:href="@{/faq}">Вопросы</a>
-                    </li>
-                    <li class="nav__item">
-                        <a class="nav__links" th:href="@{/support}">Поддержка</a>
-                    </li>
+                <li class="nav__item">
+                    <a class="nav__links" th:href="@{/sql/lecturers}">Учителям</a>
+                </li>
+                <li class="nav__item">
+                    <a class="nav__links" th:href="@{/faq}">Вопросы</a>
+                </li>
+                <li class="nav__item">
+                    <a class="nav__links" th:href="@{/support}">Поддержка</a>
+                </li>
 
-                    <li>
-                        <a class="nav__links" th:href="@{/sql/api/v1/download_protocols}">Протоколы</a>
-                    </li>
+                <li class="nav__item">
+                    <a class="nav__links" th:href="@{/sql/api/v1/download_protocols}">Протоколы</a>
+                </li>
 
-                    <li>
-                        <div class="dropdown">
-                            <button class="dropbtn">Dropdown</button>
-                            <div class="dropdown-content">
-                                <a th:each="year: ${years_selector}"
-                                   th:text="${year.year}"
-                                   th:value="${year.year}"
-                                   th:href="@{/sql/lecturers/{year}(year=${year.year})}"></a>
-                            </div>
+                <li class="nav__item">
+                    <div class="dropdown">
+                        <button class="dropbtn">Архив</button>
+                        <div class="dropdown-content">
+                            <a th:each="year: ${years_selector}"
+                               th:text="${year.year}"
+                               th:value="${year.year}"
+                               th:href="@{/sql/lecturers/{year}(year=${year.year})}"></a>
                         </div>
-                    </li>
-                </ul>
-            </nav>
-        </div>
+                    </div>
+                </li>
+            </ul>
+        </nav>
     </div>
+</div>
 </header>
 <main>
     <section class="contacts-form">
         <div class="container form-container">
             <h2 class="section-header form-header">Получить документ</h2>
             <div class="form-space flex">
-                <form action="https://jsonplaceholder.typicode.com/posts" method="post" class="form-body" th:action="@{/sql/lecturers}">
+                <form method="post" class="form-body" th:action="@{/sql/lecturers}">
 
                     <div class="selector-patch">
                         <label class="selection-param">Направление
@@ -119,13 +120,13 @@
                                 </option>
                             </select>
                         </label>
-                    </div><button class="btn-reset form-button list-button" >Получить</button>
+                    </div><button class="btn-reset form-button list-button" onclick="toggleDisplayAndSaveState()">Получить</button>
                 </form>
             </div>
         </div>
     </section>
-    <section class="display">
-        <div class="container">
+    <section class="display" th:if="${flag} == true">
+        <div class="container display-section", id="display-container">
             <h2 class="section-header">Документ</h2>
             <div class="container leveling">
                 <table class="columns">
