--- a/src/main/resources/templates/support.html
+++ b/src/main/resources/templates/support.html
@@ -16,7 +16,7 @@
     <header class="header">
         <div class="header__container flex">
           <div class="container flex">
-            <a href="#" class="header__logo">
+            <a th:href="@{/}" class="header__logo">
               <div class="header__logo-inside flex">
                 <img src="img/rudn_logo.png" alt="Евклид" class="header__logo__picture">
               </div>
