--- a/src/main/resources/static/css/media.css
+++ b/src/main/resources/static/css/media.css
@@ -1,4 +1,4 @@
-@media(max-width: 1100px){
+@media(max-width: 1180px){
   body {
       align-items: center;
     }
@@ -18,6 +18,10 @@
       margin: 0 auto;
       width: 100%;
   
+    }
+
+    .selection{
+      max-width: fit-content;
     }
   
     .header__container {
@@ -79,31 +83,39 @@
       }
 
       .selector-patch{
-        width: 110px;
-        margin-right: 2%;
+        max-width: 120px !important;
+        min-width: 100px;
+        margin-right: 1.2%;
       }
 
+      .selector-patch:first-child {
+        max-width: 170px !important;
+      }
+
+
       .selector-patch-2{
-        width: 110px;
-        margin-right: 5%;
+        max-width: 120px;
+        min-width: 115px;
+        margin-right: 1.2%;
       }
 
       .slider-val{
-        width: 95%;
+        width: 95% !important;
       }
 
       .selection-param {
+        max-width: 100%;
         line-height: 21px;
         font-size: 12px;
         min-height: 43px;
     }
 
     .margin-fix{
-      margin-right:   2%;
+      margin-right: 2%;
     }
 
     .val{
-      width: 100%;
+      width: 90%;
     }
   
 }
